--- a/Frontend/src/index.css
+++ b/Frontend/src/index.css
@@ -1,7 +1,4 @@
-/* ./src/index.css */
-@import 'tailwindcss/base';
-@import 'tailwindcss/components';
-@import 'tailwindcss/utilities';
+@import 'tailwindcss';
 
 body {
   margin: 0;
